# tinks-world

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  entity.py  format.sh  main.py  requirements.txt  scene.py  vcpkg.json
.github/workflows/: ci.yml
aseprite/: anya.aseprite  tink.aseprite  wf.aseprite
include/: color.h  defs.h  entity.h  main.h  resources.h  scene.h  vec2.h
src/: color.c  entity.c  main.c  resources.c  scene.c  vec2.c
web/: TinksWorld.html
